--- a/starter_server/src/main/resources/application-prod.yml
+++ b/starter_server/src/main/resources/application-prod.yml
@@ -2,12 +2,11 @@ spring:
   # 数据库配置
   datasource:
     username: root
-    password: ajielxj
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://lxjhua.top:3306/library_manager?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/library_manager?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true&useSSL=false&serverTimezone=Asia/Shanghai
 
   # redis配置
   redis:
-    host: lxjhua.top
-    password: ajielxjredis6
+    host: localhost
     port: 6379
